--- a/index.html
+++ b/index.html
@@ -15,9 +15,89 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
                 debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
                 ut. Ducimus nostrum sit tempora?</p>
-            <datatable-slot>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <datatable v-bind:data="dataX" v-bind:headers="headersX" v-bind:custom-headers="customHeaders"></datatable>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
+                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
+                ut. Ducimus nostrum sit tempora?</p>
 
-            </datatable-slot>
 
         </div>
     </div>
