update index html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <section class="section">
     <div class="container">
         <div id="app">
+
             <datatable v-bind:data="users" v-bind:headers="headers"></datatable>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
                 debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
@@ -25,79 +26,264 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
                 debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
                 ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis consectetur consequatur
-                debitis dolor, ducimus eaque eveniet, explicabo facere fugit mollitia odio quasi reiciendis repellendus
-                ut. Ducimus nostrum sit tempora?</p>
 
+            <datatable>
+                <template slot="p-head">
+                    <tr>
+                        <th colspan="2"></th>
+                        <th colspan="6">19 Nov</th>
+                    </tr>
+                    <tr>
+                        <th colspan="2"></th>
+                        <th colspan="3">Target</th>
+                        <th colspan="3">Actual</th>
+                    </tr>
+                </template>
+                <template slot="p-filter">
+                    <tr>
+                        <th>No</th>
+                        <th>Name</th>
+                        <th>Call</th>
+                        <th>Ec</th>
+                        <th>Value</th>
+                        <th>Call</th>
+                        <th>Ec</th>
+                        <th>Value</th>
+                    </tr>
+                </template>
+                <template slot="p-body">
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Adhi Tomara</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>750000</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                </template>
+            </datatable>
 
         </div>
     </div>
